# serializer version: 1
# name: TestCredentialStoreGolden.test_file_store_delete_returns_false_for_missing
  False
# ---
# name: TestCredentialStoreGolden.test_file_store_get_missing_key
  None
# ---
# name: TestCredentialStoreGolden.test_list_keys_after_set
  list([
    'anthropic_api_key',
    'aura_api_key',
    'openai_api_key',
  ])
# ---
# name: TestCredentialStoreGolden.test_list_keys_empty_store
  list([
  ])
# ---
# name: TestCredentialStoreGolden.test_store_factory_warning_message
  'System keyring is not available; credentials will be stored in a local file. Install a keyring backend for better security.'
# ---
